[package]

name = "servo-skia"
version = "0.30000022.0"
authors = ["The Skia Project Developers and The Servo Project Developers"]
description = "2D graphic library for drawing Text, Geometries, and Images"
license = "BSD-3-Clause"
repository ="https://github.com/servo/skia/"
homepage = "https://skia.org/"
edition = "2018"
links = "skia"
build = "build.rs"
exclude = [
    "/experimental/*",
    "/expectations/*",
    "/gm/tests/*",
    "/gm/rebaseline_server/*",
    "/platform_tools/android/bin/*",
    "/platform_tools/android/examples/*",
    "/platform_tools/android/tests/*",
    "/tools/*",
    "/tests/*",
]

[lib]
name = "skia"

[features]
default = ["gl_backend"]
gl_backend = ["glx", "cgl", "io-surface", "gleam", "servo-egl", "glutin"]

[build-dependencies]
cmake = "0.1"

[dependencies]
euclid = "0.19"
gleam = {version = "0.6", optional = true}
libc = "0.2"
expat-sys = "2.1.5"

[target.'cfg(target_os = "windows")'.dependencies]
glutin = {version = "0.21.0", optional = true}

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
servo-fontconfig-sys = "4.0.0"
servo-freetype-sys = "4.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.0.0", features = ["xlib"] }
glx = { version = "0.2.5", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
servo-egl = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cgl = { version = "0.2.3", optional = true }
io-surface = { version = "0.11.1", optional = true }
