[package]

name = "servo-skia"
version = "0.30000023.1"
authors = ["The Skia Project Developers and The Servo Project Developers"]
description = "2D graphic library for drawing Text, Geometries, and Images"
license = "BSD-3-Clause"
repository ="https://github.com/servo/skia/"
homepage = "https://skia.org/"
links = "skia"
build = "build.rs"
exclude = [
    "/experimental/*",
    "/expectations/*",
    "/gm/tests/*",
    "/gm/rebaseline_server/*",
    "/platform_tools/android/bin/*",
    "/platform_tools/android/examples/*",
    "/platform_tools/android/tests/*",
    "/tools/*",
    "/tests/*",
]

[lib]
name = "skia"

[build-dependencies]
cmake = "0.1"

[dependencies]
euclid = "0.20"
gleam = "0.7"
libc = "0.2"
expat-sys = "2.1.5"

[target.'cfg(target_os = "windows")'.dependencies]
glutin = "0.21.0"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
servo-fontconfig-sys = "4.0.0"
servo-freetype-sys = "4.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.0.0", features = ["xlib"] }
glx = "0.2.5"

[target.'cfg(target_os = "android")'.dependencies]
servo-egl = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "0.3"
io-surface = "0.12"
